objects/Apttus_Approval__Approval_Request_History__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Term_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement Term Exception</label>
        <referenceTo>Apttus__Agreement_Term_Exception__c</referenceTo>
        <relationshipLabel>Agreement Term Exception Approval History</relationshipLabel>
        <relationshipName>Related_Agreement_Term_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Approval History</relationshipLabel>
        <relationshipName>Related_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Related Opportunity Owner History</relationshipLabel>
        <relationshipName>Related_Opportunity_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Approval History</relationshipLabel>
        <relationshipName>Related_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__RequestType__c</fullName>
        <description>The approval request type</description>
        <inlineHelpText>The approval request type</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Child Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Request_Comments__c</fullName>
        <label>Approval Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SendReminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SequenceString__c</fullName>
        <formula>LPAD(Apttus_Approval__Sequence__c, 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Sequence String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <label>Sub-Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status_Link__c</fullName>
        <formula>HYPERLINK(Id,
CASE(Apttus_Approval__Approval_Status__c,
&quot;Not Submitted&quot;,&quot;Not Submitted&quot;,
&quot;Notified&quot;,&quot;Notified&quot;,
&quot;Submitted&quot;,&quot;Submitted&quot;,
&quot;Assigned&quot;,&quot;Assigned&quot;,
&quot;Reassigned&quot;,&quot;Reassigned&quot;,
&quot;Approved&quot;,&quot;Approved&quot;,
&quot;Rejected&quot;,&quot;Rejected&quot;,
&quot;Cancelled&quot;,&quot;Cancelled&quot;,
&quot;On Hold&quot;,&quot;On Hold&quot;,
&quot;None&quot;),
&quot;_top&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepLabel__c</fullName>
        <description>The step label</description>
        <inlineHelpText>The step label</inlineHelpText>
        <label>Step Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepNameLink__c</fullName>
        <description>If request is assigned or reassigned, step name rendered as link to navigate to approval summary page, otherwise, rendered as output text.</description>
        <formula>IF (OR(ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)), HYPERLINK(&quot;/apex/ApprovalSummaryLaunch?Id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;, Apttus_Approval__Step_Name__c, &quot;_top&quot;), Apttus_Approval__Step_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequenceString__c</fullName>
        <description>Sequence with trailing zeros suppressed</description>
        <formula>IF(FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c)) = 2, LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 5, &apos;0&apos;), 3))), LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 6, &apos;0&apos;), 3))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sequence with trailing zeros suppressed</inlineHelpText>
        <label>Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <description>The step execution sequence</description>
        <label>Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Seq_Number__c</fullName>
        <label>Step Group Seq Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Name__c</fullName>
        <description>The step name</description>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step__c</fullName>
        <label>Step Definition Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment1__c</fullName>
        <label>Submission Comment 1</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment2__c</fullName>
        <label>Submission Comment 2</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment3__c</fullName>
        <label>Submission Comment 3</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessDependsOn__c</fullName>
        <description>List of sub processes (belonging to the same step) which must be completed before this sub process. The list contains a comma separated subprocess sequence numbers</description>
        <label>Subprocess Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessName__c</fullName>
        <description>The name of the subprocess the step is associated with</description>
        <label>Subprocess Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessSequence__c</fullName>
        <description>The subprocess execution sequence</description>
        <label>Subprocess Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepDependsOn__c</fullName>
        <description>List of sub steps (belonging to the same subprocess) which must be completed before this substep. The list contains a comma separated substep sequence numbers</description>
        <label>Substep Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepName__c</fullName>
        <description>The name of the substep associated with the subprocess.</description>
        <inlineHelpText>The name of the substep associated with the subprocess.</inlineHelpText>
        <label>Substep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepSequence__c</fullName>
        <description>The substep execution sequence within a subprocess</description>
        <label>Substep Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Workflow_Trigger_Added_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the ApprovalAction visualforce page when comments are added to an approval request without actually approving or rejecting the request. This flag then becomes the trigger for workflow rules that get fired to send a notification to parties that comments have been entered for the request.</description>
        <label>Workflow Trigger Added Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart</description>
        <label>Related Cart</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>Approval_Request_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart line item</description>
        <label>Related Cart Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>Approval_Request_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart owner</description>
        <label>Related Cart Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Request_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/ProposalQuote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <label>Related Quote/ProposalProposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Approval Request History</relationshipLabel>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal owner</description>
        <label>Related Quote/Proposal OwnerUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalRequestHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Request History</label>
    <listViews>
        <fullName>APTS_AEM_Risk_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>AEM Risk Approval Queue</label>
        <queue>APTS_AEM_Risk_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Canada_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Approval Queue</label>
        <queue>APTS_Canada_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Canada_Credit_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Credit Approval Queue</label>
        <queue>APTS_Canada_Credit_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Contract_Counsel_Corp_Tax_Aprvl_que_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Counsel-Corp Tax Approval Queue</label>
        <queue>APTS_Contract_Counsel_Corp_Tax_Aprvl_que</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Contrct_Cnsel_Canada_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Counsel-Canada Approval Queue</label>
        <queue>APTS_Contrct_Cnsel_Canada_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Corp SMB Approval Queue</label>
        <queue>APTS_Corp_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_Global_7_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Software Risk &amp; Compliance Queue</label>
        <queue>APTS_Corp_Global_7_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_Investigative_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Corp Investigative Approval Queue</label>
        <queue>APTS_Corp_Investigative_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_Prof_Serv_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Corp Prof Serv Approval Queue</label>
        <queue>APTS_Corp_Prof_Serv_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_Strategic_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Corp Strategic Approval Queue</label>
        <queue>APTS_Corp_Strategic_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Corp_UK_EMEA_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Corp UK/EMEA Approval Queue</label>
        <queue>APTS_Corp_UK_EMEA_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Credit_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Approval Queue</label>
        <queue>APTS_Credit_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_FindlawOCApttus_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>FindlawOCApttus</label>
        <queue>APTS_FindlawOCApttus</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Government_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Government Approval Queue</label>
        <queue>APTS_Government_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APTS_Government_CLEAR_Approval_Queue_Approval_Request_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Government CLEAR Approval Queue</label>
        <queue>APTS_Government_CLEAR_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Request History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>